--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ header{
 
 	@media(max-width: 768px){
 		.advimages{
-			width: 350px;
+			width: 300px;
 		}
 	}
 /*End Adv Section*/
@@ -389,17 +389,17 @@ ul.clientslists li:hover{
 	box-shadow: 3px -5px 0 rgba(0,0,0,0.3);
 }
 
-@media(max-width: 768px){
+@media(max-width: 450px){
 
 ul.clientslists li{
 	/*background-color: #f4f4f4;*/
-	border: 2px solid #e9e9e9;
-	padding: 5px 10px;
+	border: 1px solid #e9e9e9;
+	padding: 3px 6px;
 	margin: 0 2px;
 }
 
 ul.clientslists img{
-	width: 70px;
+	width: 55px;
 }
 
 ul.clientslists li:hover{
@@ -469,8 +469,23 @@ ul.clientslists li:hover{
 
 @media(max-width: 768px){
 	.phoneicons{
-		width: 50px;
+		width: 40px;
 	}
+	
+
+	.qutoes .btn-calls{
+	width: 100px;
+	height: 50px;
+	font-size: 10px;
+	line-height: 50px;
+	border: 0;
+	border-radius: 50px;
+	padding: 0; /*cuz of bootstrap btn effect*/
+
+	transform: translateY(-1px);
+
+	transition: all .3s;
+}
 }
 
 /*End Request Quote*/
